--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = lolin_c3_mini
 framework = arduino
+monitor_filters = esp32_exception_decoder
 lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
