--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
 	olikraus/U8g2@^2.36.5
-	bblanchon/ArduinoJson@^7.4.1v
+	bblanchon/ArduinoJson@^7.4.1
 	esp32async/AsyncTCP@^3.3.8
 	esp32async/ESPAsyncWebServer@^3.7.6
 build_flags = 
