Fix unsaved settings and changed target

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:stable]
 platform = espressif32
-board = lolin_c3_mini
+board = seeed_xiao_esp32c3
 framework = arduino
 monitor_filters = esp32_exception_decoder
 lib_compat_mode = strict
