--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.4.1
 	esp32async/AsyncTCP@^3.3.8
 	esp32async/ESPAsyncWebServer@^3.7.6
+	rlogiacco/Battery Sense@^1.2.0
 build_flags = 
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
