Revert "Changed platform to esp32 c6 (Actually a useful hack to do it properly and use arduino framework!)"
OKAY, THIS BOARD IS BS

This reverts commit f92619823e62fdf6143439e0634fe06bdece585e.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:stable]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20/platform-espressif32.zip
-board = seeed_xiao_esp32c6
+platform = espressif32
+board = seeed_xiao_esp32c3
 framework = arduino
 monitor_filters = esp32_exception_decoder
 lib_compat_mode = strict
